elk-oct21/01-elk-namespace.yaml
# elk-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elk-stack
  labels:
    name: elk-stack
