elk-oct21/13-elk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elk-ingress
  namespace: elk-stack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/kibana$ /kibana/ permanent;
spec:
  rules:
  - http:
      paths:
      - path: /elasticsearch
        pathType: Prefix
        backend:
          service:
            name: elasticsearch
            port:
              number: 9200
      - path: /kibana
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
